--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,17 +1,106 @@
 body {
-    background-color: 000000;
-    color: #22e0ff;
-    text-shadow: 0 -40px 100px, 0 0 2px, 0 0 1em #fff, 0 0 0.5em #fff, 0 0 0.1em #fff, 0 10px 3px #000;
+    margin:0px;
+    font-family:helvetica;
 }
-br {
-    display: block;
-    content: "";
-    margin: 2px, 0;
+header {
+    display:flex;
+    justify-content:space-between;
+    align-items:center;
+    background-color: aqua;
+    height: 30px;
 }
-.topbar {
-    float: left;
+.logo h2 {
+    margin-top:0px;
+    padding-top:0px;
+    margin-bottom:0px;
+    padding-bottom:0px;
 }
-.sort {
-    white-space: nowrap;
-    float: right;
+.headerlinks {
+    padding-left:5px;
+}
+.logo {
+    display: flex;
+    align-items:center;
+    justify-content:flex-start;
+    padding:1px;
+}
+main {
+    display:flex;
+    justify-content:center;
+    background-image: url(./img2.jpg);
+    height: 100%;
+}
+.contents {
+    display:flex;
+    background-color: white;
+    width: 60%;
+    height:100%;
+    /*justify-content:space-between;*/
+}
+.information {
+    width: 30%;
+    height: 100%;
+    background-color: #c0e0ee;
+}
+.user {
+    font-size:25px;
+}
+.tl {
+    width: 70%;
+    background-color: white;
+    margin:10px;
+}
+.prof {
+    height:60px;
+    width:60px;
+    object-fit:cover;
+    margin:15px;
+}
+.desc {
+    margin:5px;
+    font-size: 20px;
+}
+.titletext {
+    font-size: 200%;
+    margin:5%;
+    text-align:center;
+}
+.account-info {
+    display:flex;
+    align-items:center;
+}
+textarea {
+    resize:none;
+    height:15%;
+    width: 85%;
+}
+.division {
+    width:100%;
+    text-align:center;
+    color:#f5f5f5
+}
+.username {
+    margin-top:0px;
+    margin-left:2%;
+    margin-bottom:0px;
+    font-size:20px;
+}
+.avatar1 {
+    object-fit: cover;
+    height: 60px;
+    width: 60px;
+}
+.tweet {
+    display:flex;
+    align-items:flex-start;
+}
+.cont {
+    margin-left:5px;
+}
+.contents1 {
+    margin-top:5px;
+    margin-bottom:5px;
+}
+.time {
+    margin:0px;
 }
