--- a/stylesheet.css
+++ b/stylesheet.css
@@ -18,6 +18,10 @@ header {
 .headerlinks {
     padding-left:5px;
 }
+.infobar1 {
+    margin:10px;
+    text-align:center;
+}
 .logo {
     display: flex;
     align-items:center;
@@ -32,7 +36,7 @@ main {
 }
 .contents {
     display:flex;
-    background-color: white;
+    /*background-color: white;*/
     width: 60%;
     height:100%;
     /*justify-content:space-between;*/
@@ -48,7 +52,7 @@ main {
 .tl {
     width: 70%;
     background-color: white;
-    margin:10px;
+    padding:10px;
 }
 .prof {
     height:60px;
