--- a/stylesheet.css
+++ b/stylesheet.css
@@ -65,6 +65,10 @@ main {
     width: 30%;
     /*height: 100%;*/
     background-color: #c0e0ee;
+    /*position: -webkit-sticky;
+    position: sticky;
+    top:0;
+    z-index:1;*/
 }
 .user {
     font-size:25px;
