--- a/stylesheet.css
+++ b/stylesheet.css
@@ -58,17 +58,17 @@ main {
     display:flex;
     /*background-color: white;*/
     width: 60%;
-    height:100%;
+    /*height:100%;*/
     /*justify-content:space-between;*/
 }
 .information {
     width: 30%;
-    /*height: 100%;*/
     background-color: #c0e0ee;
-    /*position: -webkit-sticky;
+    height:100vh;
+    position: -webkit-sticky;
     position: sticky;
-    top:0;
-    z-index:1;*/
+    top:30px;
+    z-index:1;
 }
 .user {
     font-size:25px;
